BDSA P4 utils update

--- a/utils/ExportModules.ipynb
+++ b/utils/ExportModules.ipynb
@@ -56,7 +56,6 @@
       "../module_1/students_raw.csv\n",
       "../module_1/m1_f1_data_analysis.PNG\n",
       "../module_1/example.db\n",
-      "../module_1/M1_NB2_DataAnalysisBasics-Copy1.ipynb\n",
       "../module_1/snr_overtone.png\n",
       "../module_2/\n",
       "../module_2/viz/\n",
@@ -77,8 +76,13 @@
       "../module_2/viz/data/\n",
       "../module_2/viz/data/bc_export.json\n",
       "../module_2/Upload_01.png\n",
+      "../module_2/.ipynb_checkpoints/\n",
+      "../module_2/.ipynb_checkpoints/M2_NB2_FunFIntroduction-checkpoint.ipynb\n",
+      "../module_2/.ipynb_checkpoints/M2_NB1_SourcesOfData-checkpoint.ipynb\n",
+      "../module_2/.ipynb_checkpoints/M2_NB3_CollectYourOwnData-checkpoint.ipynb\n",
       "../module_2/M2_NB1_SourcesOfData.ipynb\n",
       "../module_2/M2_NB3_CollectYourOwnData.ipynb\n",
+      "../module_2/id5_screenshot.png\n",
       "../module_2/bc_visualization_screenshot.png\n",
       "../module_2/README.md\n",
       "../module_2/M2_NB2_FunFIntroduction.ipynb\n",
@@ -88,7 +92,12 @@
       "../module_2/data/students_raw.csv\n",
       "../module_3/\n",
       "../module_3/M3_NB1_BSSID.ipynb\n",
+      "../module_3/my_updated_file.png\n",
       "../module_3/innerjoin.png\n",
+      "../module_3/.ipynb_checkpoints/\n",
+      "../module_3/.ipynb_checkpoints/M3_NB3_GeotaggingWiFiAP-checkpoint.ipynb\n",
+      "../module_3/.ipynb_checkpoints/M3_NB1_BSSID-checkpoint.ipynb\n",
+      "../module_3/.ipynb_checkpoints/M3_NB2_NoiseVsBias-checkpoint.ipynb\n",
       "../module_3/M3_NB2_NoiseVsBias.ipynb\n",
       "../module_3/README.md\n",
       "../module_3/dtu_map.png\n",
@@ -97,9 +106,18 @@
       "../module_3/updated_file.png\n",
       "../module_4/\n",
       "../module_4/call.adjmatrix\n",
+      "../module_4/filtered_signal.pdf\n",
+      "../module_4/.ipynb_checkpoints/\n",
+      "../module_4/.ipynb_checkpoints/M4_NB1_NetworkX_Introduction-checkpoint.ipynb\n",
+      "../module_4/.ipynb_checkpoints/M4_NB2_PeerNetworkAnalysis-checkpoint.ipynb\n",
+      "../module_4/.ipynb_checkpoints/M4_NB3_NetworkClustering-checkpoint.ipynb\n",
+      "../module_4/filtered_signal.png\n",
       "../module_4/M4_NB3_NetworkClustering.ipynb\n",
+      "../module_4/original_signal.png\n",
+      "../module_4/centrality.csv\n",
       "../module_4/M4_NB2_PeerNetworkAnalysis.ipynb\n",
       "../module_4/M4_NB4_GraphSignalProcessing.ipynb\n",
+      "../module_4/noisy_signal.pdf\n",
       "../module_4/README.md\n",
       "../module_4/img/\n",
       "../module_4/img/gsp_demo.jpg\n",
@@ -117,6 +135,8 @@
       "../module_4/img/05_filtered_signal.png\n",
       "../module_4/img/petersen_graph_signal.png\n",
       "../module_4/img/06_Calls_pygsp.png\n",
+      "../module_4/original_signal.pdf\n",
+      "../module_4/noisy_signal.png\n",
       "../module_4/M4_NB1_NetworkX_Introduction.ipynb\n",
       "../module_5/\n",
       "../module_5/bandicoot-training-master/\n",
@@ -183,7 +203,13 @@
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-77.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-72.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-78.csv\n",
-      "../module_5/bandicoot-training-master/data-fnf/records/sp10-01-34.csv\n",
+      "../module_5/bandicoot-training-master/data-fnf/records/sp10-01-34.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-37.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-11.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/sp10-01-49.csv\n",
@@ -208,13 +234,7 @@
       "../module_5/bandicoot-training-master/data-fnf/records/sp10-01-48.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-21.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-27.csv\n",
-      "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-15.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-15.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/sp10-01-11.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-59.csv\n",
       "../module_5/bandicoot-training-master/data-fnf/records/fa10-01-58.csv\n",
@@ -423,6 +443,9 @@
       "../module_5/M5_NB1_BandicootIntroduction.ipynb\n",
       "../module_5/M5_NB2_BandicootMachineLearning.ipynb\n",
       "../module_5/all_features.csv\n",
+      "../module_5/.ipynb_checkpoints/\n",
+      "../module_5/.ipynb_checkpoints/M5_NB2_BandicootMachineLearning-checkpoint.ipynb\n",
+      "../module_5/.ipynb_checkpoints/M5_NB1_BandicootIntroduction-checkpoint.ipynb\n",
       "../module_5/README.md\n",
       "../module_5/plot_classification.py\n",
       "../module_5/fnf_features.csv\n",
@@ -453,6 +476,9 @@
       "../module_7/M7_NB1_Friends_and_Family.ipynb\n",
       "../module_7/Scientific_Method.png\n",
       "../module_8/\n",
+      "../module_8/old/\n",
+      "../module_8/old/M8_NB2_LivingLabs.ipynb\n",
+      "../module_8/old/M8_NB1_Blueprint.ipynb\n",
       "../module_8/.ipynb_checkpoints/\n",
       "../module_8/.ipynb_checkpoints/M8_NB1_Blueprint-checkpoint.ipynb\n",
       "../module_8/.ipynb_checkpoints/M8_NB2_LivingLabs-checkpoint.ipynb\n",
@@ -484,7 +510,7 @@
     "\n",
     "Click the link bellow to download the file that was created in the previous step.\n",
     "\n",
-    "[modules.tar.gz](/files/modules.tar.gz)"
+    "[modules.tar.gz](../modules.tar.gz)"
    ]
   },
   {
@@ -495,9 +521,9 @@
    "source": [
     "### 3. Import notebooks\n",
     "\n",
-    "Log in to your other Jupyter server and navigate to module_0/M0_NB4_ImportModules.ipynb. Follow the instructions there to complete the process.\n",
+    "Log in to your other Jupyter server and navigate to utils/ImportModules.ipynb. Follow the instructions there to complete the process.\n",
     "\n",
-    "If you do not have module_0/M0_NB4_ImportModules.ipynb on the other Jupyter server save it as a .ipynb file from this server and upload it to a new folder called module_0 on the other server."
+    "If you do not have utils/ImportModules.ipynb on the other Jupyter server save it as a .ipynb file from this server and upload it to a new folder called utils on the other server."
    ]
   },
   {
@@ -512,9 +538,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -526,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
