--- a/utils/ImportModules.ipynb
+++ b/utils/ImportModules.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Purpose\n",
     "\n",
-    "If you want to move your work to this Jupyter server from another Jupyter server this notebook will help you uncompress the file created in the module_0/M0_NB3_ExportModules."
+    "If you want to move your work to this Jupyter server from another Jupyter server this notebook will help you uncompress the file created in the utils/ExportModules.ipynb."
    ]
   },
   {
@@ -45,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!tar xvfz ../modules.tar.gz --directory ../"
@@ -74,23 +72,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
