MIT BDSA P5 M1 update

--- a/module_0/M0_NB1_GettingStarted.ipynb
+++ b/module_0/M0_NB1_GettingStarted.ipynb
@@ -258,15 +258,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a function that prints ten numbers.\n",
-    "def print_10_nums():\n",
-    "    for i in range(10):\n",
-    "        print(i),"
+    "# In Python 3, the default behaviour for print changed and the default is newline.\n",
+    "# To change this behaviour, you can add optional arguments.\n",
+    "# View the help function for the print method.\n",
+    "help(print) "
    ]
   },
   {
@@ -275,6 +273,18 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# Create a function that prints ten numbers.\n",
+    "def print_10_nums():\n",
+    "    for i in range(10):\n",
+    "        print(i, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Execute your function.\n",
@@ -293,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set a new variable, d, equal to 10 and print the variable.\n",
@@ -316,9 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check whether Pandas is installed.\n",
@@ -326,6 +332,8 @@
     "import sys\n",
     "\n",
     "# Check whether Pandas package is available in system.\n",
+    "# Note that you may have multiple versions of Python installed in virtual environments. The statements in this\n",
+    "#   cell was created for your virtual analysis environment and may have different results when executed elsewhere.\n",
     "'pandas' in sys.modules"
    ]
   },
@@ -339,9 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "help('pandas')"
@@ -553,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
