--- a/module_1/M1_NB2_DataAnalysisBasics.ipynb
+++ b/module_1/M1_NB2_DataAnalysisBasics.ipynb
@@ -66,9 +66,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note**: \n",
-    "\n",
-    "> It is strongly recommended that you save and checkpoint after applying significant changes or completing exercises. This allows you to return the notebook to a previous state, should you wish to do so. On the Jupyter menu, select \"File\", then \"Save and Checkpoint\" from the dropdown menu that appears."
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Note</b>:<br>\n",
+    "It is strongly recommended that you save and checkpoint after applying significant changes or completing exercises. This allows you to return the notebook to a previous state, should you wish to do so. On the Jupyter menu, select \"File\", then \"Save and Checkpoint\" from the dropdown menu that appears.\n",
+    "</div>"
    ]
   },
   {
@@ -82,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load the libraries that you will require in this notebook.\n",
@@ -132,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Generate input data.\n",
@@ -260,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read the file \"workbook.csv\" and print the contents.\n",
@@ -277,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sample_data= pd.read_csv('workbook.csv', sep=\";\")\n",
@@ -294,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sample_data= pd.read_csv('workbook.csv', sep=\";\", header=None)\n",
@@ -352,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(json.dumps(json.loads(jsonStr), indent=4, sort_keys=True))"
@@ -369,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read JSON-formatted data using pandas and print the dataframe.\n",
@@ -456,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Connect to your database and set the cursor.\n",
@@ -487,7 +504,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Connect to your database and set the cursor.\n",
@@ -522,7 +541,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -586,7 +607,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Review the data with \"head()\".\n",
@@ -597,7 +620,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_gps.tail()"
@@ -613,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_gps.shape"
@@ -631,7 +658,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Review data types with \"info()\".\n",
@@ -648,7 +677,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Review numeric data with \"describe()\".\n",
@@ -683,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Select the first 10 rows.\n",
@@ -693,7 +726,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Select the columns ('provider','latitude','longitude') for the rows labelled 10,11, ...,15.\n",
@@ -703,7 +738,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Access records where the provider is 'gps'. Return the first 5 rows from the filtered data frame.\n",
@@ -724,7 +761,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Select the first two rows using intger-based indexing.\n",
@@ -734,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Select the first 5 rows and columns numbered 2, 3, and 4. \n",
@@ -758,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grp = df_gps.groupby(['provider'])\n",
@@ -776,6 +819,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -793,7 +837,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grp.size()"
@@ -811,7 +857,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grp.mean()['accuracy']"
@@ -919,7 +967,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Review the data, including the transformed column.\n",
@@ -950,7 +1000,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Let's look at the observations or rows over time per provider as histograms.\n",
@@ -980,13 +1032,11 @@
     " - Load the WIFI dataset provided in your \"module_1\" folder, to a variable called \"ds_student\". (The file name is \"wifi_u02.csv\".)\n",
     " - Print the head, specifying the number of records to be returned as 10.\n",
     " - Transform the time column into a \"datetime\" data type that humans can intelligently interpret.\n",
-    " - Group the dataframe by BSSID, set \"ds_student_grouped\" equal to the result, and display the top 5 records of the new dataframe. \n",
+    " - Group the dataframe by BSSID and set \"ds_student_grouped\" equal to the result. Display the top 5 records of the aggregate dataframe obtained after applying the ``count()`` method to ``ds_student_grouped``. \n",
     "\n",
     "2. By referring to the **five Rs** of data quality, can you offer any insights or observations on any of the data sets utilized in this notebook? Your answer should be two or three sentences long, and submitted in the provided markdown cell.\n",
     "\n",
-    "> **Hint**: You can change code cells to markdown cells by selecting the cell and then changing the type in the Jupyter toolbar at the top of your notebook.\n",
-    "\n",
-    "\n"
+    "> **Hint**: You can change code cells to markdown cells by selecting the cell and then changing the type in the Jupyter toolbar at the top of your notebook."
    ]
   },
   {
@@ -1085,7 +1135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create Pandas date range with starting date, number of periods and frequency as input arguments.\n",
@@ -1108,7 +1160,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Display the type of the variable.\n",
@@ -1118,7 +1172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Show summary statistics of numeric data.\n",
@@ -1135,7 +1191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Return the min and max date.\n",
@@ -1159,6 +1217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1177,7 +1236,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a new data frame, tsc, containing the subset of 2015 data and print the minimum and maximum values.\n",
@@ -1189,7 +1250,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot the new dataset.\n",
@@ -1206,7 +1269,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Example data.\n",
@@ -1271,7 +1336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
