--- a/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
+++ b/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
@@ -103,6 +103,7 @@
     "import folium\n",
     "import glob\n",
     "from tqdm import tqdm\n",
+    "import random\n",
     "%matplotlib inline\n",
     "\n",
     "# Load custom modules.\n",
@@ -349,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Having two DataFrames with time as an index, you can simply \"join\" them.\n",
+    "Having two DataFrames with time as an index, you can simply \"join\" them on the index columns by assigning the value “None” to the argument “on” as demonstrated below.\n",
     "> A [JOIN clause](http://pandas.pydata.org/pandas-docs/stable/merging.html) is used to merge DataFrames by combining rows from two or more tables, based on a common field between them. The most common type  of join is an \"inner join\". An \"inner join\" between two tables (A and B) returns all rows from A and B, where the join condition is met. That is, the intersection of the two tables.\n",
     "\n",
     "<img src=\"innerjoin.png\" alt=\"Drawing\" style=\"width: 800px;\"/>"
@@ -361,8 +362,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Join the two data sets and display the head of the new dataset.\n",
-    "u00_raw_geotags = u00_wifi.join(u00_loc, how='inner')\n",
+    "# Join the two data sets, print the number of records found and display the head of the new dataset.\n",
+    "u00_raw_geotags = u00_wifi.join(u00_loc, how='inner',on=None)\n",
     "print('{} WiFi records found time matching location records.'.format(len(u00_raw_geotags)))\n",
     "u00_raw_geotags.head(3)"
    ]
@@ -822,11 +823,16 @@
     "# Plot the access points on a map.\n",
     "all_map_center  = list(all_geo_medians.median())\n",
     "all_routers_map = folium.Map(location=all_map_center, zoom_start=10)\n",
-    "# Add points to the map for each of the locations.\n",
-    "for router in all_static:\n",
-    "      folium.CircleMarker(all_geo_medians.loc[router], fill_color='red', radius=15, fill_opacity=0.5).add_to(all_routers_map)\n",
     "\n",
-    "#Display the map.\n",
+    "# Add 1000 randomly sampled points to a new variable.\n",
+    "random.seed(3)\n",
+    "rn_static = random.sample(all_static,1000)\n",
+    "\n",
+    "# Add the points in rn_static to the map. A random seed value is used for reproducibility of results.  \n",
+    "for router in rn_static:\n",
+    "    folium.CircleMarker(all_geo_medians.loc[router], fill_color='red', radius=15, fill_opacity=0.5).add_to(all_routers_map)\n",
+    "\n",
+    "# Display the map.\n",
     "all_routers_map"
    ]
   },
@@ -859,6 +865,15 @@
    "source": [
     "Your markdown answer here."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -972,6 +987,15 @@
     "## 4. References\n",
     "Sapieżyński, Piotr, Radu Gatej, Alan Mislove, and Sune Lehmann. 2015. “Opportunities and Challenges in Crowdsourced Wardriving.” Proceedings of the 2015 ACM Conference on Internet Measurement Conference."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -991,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
