--- a/module_3/M3_NB2_NoiseVsBias.ipynb
+++ b/module_3/M3_NB2_NoiseVsBias.ipynb
@@ -135,7 +135,7 @@
     "    for point in points:\n",
     "        put_point_on_map(point[0],point[1],point[2],pix,im)    \n",
     "\n",
-    "# Set the color of the point based on whether the point is inside or outside the building. (Inside = Red, Outside = Blue)\n",
+    "# Set the color of the point based on whether the point is inside or outside the building. (Inside = Blue, Outside = Red)\n",
     "def put_point_on_map(x, y, is_inside, pix, im, point_size=5):\n",
     "    for v_x in range(max(x-point_size,0),min(x+point_size,im.size[0])):\n",
     "        for v_y in range(max(y-point_size,0),min(y+point_size,im.size[1])):\n",
@@ -245,7 +245,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Example data.\n",
@@ -287,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create image object and load properties to a variable using the image library from PIL.\n",
@@ -324,6 +328,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -343,7 +348,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Introduce random error to the data assigned to the \"points\" variable \n",
@@ -365,7 +372,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Introduce bias error to the data assigned to the \"points\" variable \n",
@@ -404,6 +413,15 @@
    "source": [
     "Your markdown answer."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -511,7 +529,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "im = Image.open(\"dtu_map.png\")\n",
@@ -529,7 +549,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create color dictionary.\n",
@@ -615,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
